<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="Settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/contentBodyColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            style="@style/viewParent.headerText"
            android:text="@string/settings" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profileCircleImageView"
                android:layout_width="66dp"
                android:layout_height="57dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:onClick="handleimageclick"
                android:src="@drawable/propic" />

            <TextView
                android:id="@+id/utv"
                style="@style/viewParent.headerText"
                android:textSize="18sp"
                android:layout_toRightOf="@id/profileCircleImageView"
                android:layout_marginTop="20dp"/>

            <TextView
                style="@style/viewParent.headerText"
                android:text="@string/edit_personal_details_below"
                android:textSize="16sp"
                android:textColor="#5D5C5C"
                android:layout_below="@id/utv"
                android:layout_toRightOf="@id/profileCircleImageView"/>

            <ImageView
                style="@style/viewParent"
                android:src="@drawable/ic_down"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <Switch
            android:id="@+id/darkModeSwitch"
            style="@style/settingsText"
            android:drawableLeft="@drawable/ic_dark_mode"
            android:text="@string/dark_mode" />

        <TextView
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:text="@string/profile"/>

        <TextView
            style="@style/viewParent.headerText.settingsTextIcon"
            android:drawableLeft="@drawable/ic_edit_profile"
            android:text="@string/edit_profile"
            android:onClick="editprofile"
            />

        <TextView
            style="@style/viewParent.headerText.settingsTextIcon"
            android:drawableLeft="@drawable/ic_edit_password"
            android:layout_marginTop="10dp"
            android:text="@string/change_password" />

        <TextView
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:text="@string/notifications"/>

        <Switch
            style="@style/settingsText"
            android:checked="true"
            android:drawableLeft="@drawable/ic_notifications"
            android:text="@string/notifications"
            android:onClick="notification"/>

        <TextView
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:text="@string/regional"/>

        <TextView
            style="@style/viewParent.headerText.settingsTextIcon"
            android:drawableLeft="@drawable/ic_languages"
            android:text="@string/language"
            android:onClick="language"/>

        <TextView
            style="@style/viewParent.headerText.settingsTextIcon"
            android:drawableLeft="@drawable/ic_logout"
            android:text="@string/logout"
            android:onClick="logout"
            />


        <TextView
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:text="App ver 2.0.1"
            android:textAlignment="center"/>

    </LinearLayout>
</ScrollView>