<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/contentBodyColor"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".sign_up">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="5dp"
        android:textColorHint="@color/alltext"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:fontFamily="cursive"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="text"
            android:textSize="28sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:layout_marginTop="5dp"
        android:fontFamily="cursive"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/alltext"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:textSize="28sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:fontFamily="cursive"
        android:layout_marginTop="5dp"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/alltext"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:fontFamily="cursive"
            android:inputType="textEmailAddress"
            android:textSize="28sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:layout_marginTop="5dp"
        android:focusableInTouchMode="true"
        android:fontFamily="cursive"
        android:textColorHint="@color/alltext"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:fontFamily="cursive"
            android:textSize="28sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:focusable="true"
        android:layout_marginTop="5dp"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/alltext"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/npass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textSize="28sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <RadioGroup
        android:layout_width="match_parent"
        android:fontFamily="cursive"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        >

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:fontFamily="cursive"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:layout_marginLeft="10sp"
            android:text="@string/male"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:layout_marginLeft="10sp"
            android:text="@string/female"
            android:textSize="24sp" />
    </RadioGroup>

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_rounded"
        android:fontFamily="sans-serif-black"
        android:text="@string/register"
        android:textColor="#ffffffff"
        android:textSize="24sp"></Button>

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:clickable="true"
        android:layout_marginTop="5dp"
        android:textColor="@color/alltext"
        android:text="@string/already_have_an_account_login_here"
        android:textSize="16dp" />
</LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>