<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/contentBodyColor">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/contentBodyColor"
            android:id="@+id/ll"
            android:orientation="vertical"
            android:padding="20dp"
            tools:context=".login">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="312dp"
                app:srcCompat="@drawable/login" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:layout_marginTop="5dp"
                android:focusableInTouchMode="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emaili"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="cursive"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="28sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:layout_marginTop="5dp"
                android:focusableInTouchMode="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="cursive"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="28sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:layout_marginTop="10dp"
                android:text="@string/remember_me"/>

            <Button
                android:id="@+id/signin"
                android:layout_width="match_parent"
                android:fontFamily="sans-serif-black"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_rounded"
                android:text="@string/login"
                android:textColor="#ffffffff"
                android:textSize="24sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/register_now"
                android:textSize="24sp"
                android:textColor="#ffffffff"
                android:fontFamily="sans-serif-black"
                android:background="@drawable/button_rounded"
                android:onClick="sign_up_now" />
            <TextView
                android:id="@+id/fp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:clickable="true"
                android:layout_marginTop="5dp"
                android:textColor="@color/alltext"
                android:text="@string/forgot_password"
                android:textSize="16dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>